samples/_failures_safe/1761508634_bce06c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55562fdc.c: In function ‘tokenize’:
./samples/SAFE/__tmp_55562fdc.c:160:9: error: expected expression at end of input
  160 |         tokens[token_count].column =
      |         ^~~~~~
./samples/SAFE/__tmp_55562fdc.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55562fdc.c:160:9: error: expected declaration or statement at end of input
